Add test player

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="./img/flavicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/main.css">
     <script src="./js/Controls.js"></script>
+    <script src="./js/Player.js"></script>
     <script src="./js/Canvas.js"></script>
     <script src="./js/main.js"></script>
 </head>
